# CGRA-Mapper

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docker/: Dockerfile
src/: CMakeLists.txt  DFG.cpp  DFGNode.cpp  mapperPass.cpp
test/: compile.sh  dis.sh  run.sh
test/ctrl_flow/: compile.sh  verify.sh
test/dvfs/: compile.sh  config.json  run.sh
test/expandable/: compile.sh  run.sh
test/idiv/: compile.sh  run.sh
test/inter_edge/: compile.sh  run.sh
test/kernels/adpcm_coder/: compile.sh  run.sh
test/kernels/aggregate1/: compile.sh
test/kernels/aggregate2/: run.sh
test/kernels/bicg/: compile.sh  run.sh
test/kernels/blowfish/: compile.sh  run.sh
test/kernels/combine/: compile.sh  run.sh
test/kernels/combineRelu/: compile.sh  run.sh
test/kernels/compress/: compile.sh  run.sh
test/kernels/conv/: compile.sh  param.json  run.sh
test/kernels/decompose/: run.sh
test/kernels/dtw/: compile.sh
test/kernels/fft/: compile.sh
test/kernels/fir/: compile.sh
test/kernels/gemm/: compile.sh  param.json
test/kernels/histogram/: compile.sh  run.sh
test/kernels/invert/: compile.sh  run.sh
test/kernels/latnrm/: compile.sh
test/kernels/mvt/: compile.sh  run.sh
test/kernels/pooling/: compile.sh  run.sh
test/kernels/relu/: run.sh
test/kernels/relu+histogram/: compile.sh  run.sh
test/kernels/solver0/: compile.sh  run.sh
test/kernels/spmv/: compile.sh
test/kernels/spmv+conv/: compile.sh  run.sh
test/kernels/susan/: compile.sh  run.sh
test/multicycle/: compile.sh  config.json  distributed_dfg.json  inclusive_dfg.json  run.sh
test/nonlinear/: compile.sh  param.json  run.sh
test/vector/: compile.sh  run.sh  verify.sh
test/vector_test/: compile.sh  param.json  run.sh  vector_add.c  vector_explicit.c
tools/dvfs/: IcedDemo.py
tools/expandable/util/: scheduler.py
